2003-05-19  Chris Toshok  <toshok@ximian.com>

	* gui/component/addressbook-component.c
	(ensure_completion_uris_exist): fix the initial run case.  the
	config upgrade code creates all elements so we can't just check
	for NULL - we have to check if the string is empty.  Fixes #43213.

2003-05-19  Chris Toshok  <toshok@ximian.com>

	* gui/widgets/e-minicard-label.c (set_colors): if we've got focus,
	set the background of the rect to bg[NORMAL], and the fill color
	of the text and label to text[NORMAL].  This will make the
	background a different color than the canvas, but won't make it
	use the selected background.  fixes #42472

2003-05-19  Chris Toshok  <toshok@ximian.com>

	* gui/merging/e-card-merging.c (e_card_merging_book_commit_card):
	add a g_object_ref(card), to match the one in
	e_card_merging_book_add_card.  Fixes #43175.

2003-05-19  Anna Marie Dirks  <anna@ximian.com>

	* gui/contact-editor/e-contact-quick-add.c: Added HIG-appropriate
	HIG-appropriate spacing, padding, accelerators. Fixes bug #41210

	* gui/component/ldap-config.glade: HIG-ified the various dialogs
	(including the settings pages, the config druid, and the edit dialog) 
	in this glade file. This fixes bugs #41140, #41137, #41130

	* gui/merging/e-card-merging-book-commit-duplicate-detected.glade: 
	Changed button order, and added HIG-appropriate spacing/padding. 
	Fixes bug #41232.

	* gui/merging/e-card-duplicate-detected.glade: Changed button 
	order, and added HIG-appropriate spacing/padding. Fixes bug
	#41229 and #41231.

2003-05-19  Sean Gao  <sean.gao@sun.com>

	* gui/component/addressbook-component.c (xfer_folder): remove the
	summary if @remove_source is TRUE.  Fixes 38084.

2003-05-16  Anna Marie Dirks  <anna@ximian.com>

	* gui/contact-list-editor/contact-list-editor.glade:  Added 
	HIG-appropriate spacing, padding, capitalization and accelerators. 
	Fixes bug #41254

2003-05-16  Anna Marie Dirks  <anna@ximian.com>

	* gui/contact-editor/fulladdr.glade: Added HIG-appropriate